# paneleventstudy

./: LICENSE  README.md  example_paneleventstudy.ipynb  pyproject.toml
paneleventstudy/: README.md  __init__.py  dataprep.py  eventstudyplot.py  interactionweighted_eventstudy.py  iw_eventstudy_playground.py  naivetwfe_eventstudy.py  telegrambot_util.py
paneleventstudy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/: __init__.py  config.toml  naivetwfe_eventstudy.py  timeseries_eventstudy.py
src/paneleventstudy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
